--- a/使用 JavaScript 实现交互功能/test/index.html
+++ b/使用 JavaScript 实现交互功能/test/index.html
@@ -6,19 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <style>
+        div{
+            font-size: 32px;
+
+        }
+        p{
+            font-size: 0.5em;
+        }
+        span{
+            font-size:0.5em;
+        }
+    </style>
+
 </head>
 
 <body>
-    <script>
-        document.getElementById('second').innerHTML = "What does the Fox say?";
-    </script>
-
-
-    <a href="http://www.umich.edu" onclick="alert(this.href)">University of Michigan</a><br />
-
-    <a href="#" onclick="alert(this.href)">University of Michigan </a><br />
-
-    <a href="page2.html" onclick="alert(this.href)">University of Michigan </a><br />
+        <div>
+                <p>
+                   Here, there.. How big is the <span>font</span>?
+                <p>
+              </div>
 </body>
 
 </html>
